--- a/relatorios.html
+++ b/relatorios.html
@@ -174,13 +174,13 @@ body{
       <span class="badge">INSUMOS</span>
     </a>
 
-    <!-- 3 -->
-    <a href="cmv.html" class="card">
-      <div class="icon">📈</div>
-      <h3>Relatório de CMV</h3>
-      <p>CMV por prato, margem, lucro e custos operacionais.</p>
-      <span class="badge">CMV</span>
-    </a>
+<!-- Histórico -->
+<a href="historico.html" class="card">
+  <div class="icon">🕓</div>
+  <h3>Histórico de Alterações</h3>
+  <p>Auditoria completa de criações, edições, exclusões e restaurações com rollback inteligente.</p>
+  <span class="badge">AUDITORIA</span>
+</a>
 
     <!-- 4 -->
     <a href="vendas.html" class="card">
