--- a/historico.html
+++ b/historico.html
@@ -11,7 +11,6 @@
 <style>
 :root{
   --primary:#2563eb;
-  --primary-dark:#1e40af;
   --danger:#dc2626;
   --success:#16a34a;
   --bg:#f1f5f9;
@@ -34,14 +33,8 @@ body{
   margin:auto;
   padding:40px 30px;
 }
-h1{
-  margin:0;
-  font-weight:900;
-}
-.subtitle{
-  color:var(--muted);
-  margin-bottom:30px;
-}
+h1{margin:0;font-weight:900;}
+.subtitle{color:var(--muted);margin-bottom:30px;}
 
 .cards{
   display:grid;
@@ -55,15 +48,8 @@ h1{
   border-radius:var(--radius);
   box-shadow:var(--shadow);
 }
-.card small{
-  color:var(--muted);
-  font-weight:600;
-}
-.card strong{
-  font-size:28px;
-  display:block;
-  margin-top:6px;
-}
+.card small{color:var(--muted);font-weight:600;}
+.card strong{font-size:28px;display:block;margin-top:6px;}
 
 .filters{
   background:#fff;
@@ -89,16 +75,15 @@ button{
   transition:.2s;
 }
 .btn-primary{
-  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
+  background:var(--primary);
   color:#fff;
 }
 .btn-danger{
-  background:linear-gradient(135deg,#ef4444,#b91c1c);
+  background:var(--danger);
   color:#fff;
 }
 .btn-secondary{
   background:#e2e8f0;
-  color:#0f172a;
 }
 button:disabled{
   opacity:.6;
@@ -123,9 +108,7 @@ th{
   color:var(--muted);
   background:#f8fafc;
 }
-tr:hover{
-  background:#f8fafc;
-}
+tr:hover{background:#f8fafc;}
 
 .badge{
   padding:4px 10px;
@@ -161,6 +144,7 @@ tr:hover{
   align-items:center;
   margin-bottom:20px;
 }
+
 .diff{
   border:1px solid var(--border);
   border-radius:12px;
@@ -175,13 +159,7 @@ tr:hover{
   padding:8px;
   border-radius:8px;
   font-size:13px;
-}
-.linked{
-  margin-top:25px;
-  padding:15px;
-  border-radius:12px;
-  background:#f8fafc;
-  border:1px dashed var(--border);
+  margin-top:5px;
 }
 
 .toast{
@@ -200,35 +178,14 @@ tr:hover{
 <body>
 
 <div class="container">
-
 <h1>🕓 Auditoria de Alterações</h1>
-<div class="subtitle">Sistema profissional de rollback e rastreabilidade</div>
+<div class="subtitle">Rollback inteligente com verificação real</div>
 
 <div class="cards">
   <div class="card"><small>Total</small><strong id="total">0</strong></div>
   <div class="card"><small>Inserts</small><strong id="ins">0</strong></div>
   <div class="card"><small>Updates</small><strong id="upd">0</strong></div>
   <div class="card"><small>Deletes</small><strong id="del">0</strong></div>
-</div>
-
-<div class="filters">
-  <select id="fTabela">
-    <option value="">Todas Tabelas</option>
-    <option value="buffet">buffet</option>
-    <option value="buffet_itens">buffet_itens</option>
-    <option value="produtos">produtos</option>
-    <option value="impostos">impostos</option>
-  </select>
-  <select id="fOperacao">
-    <option value="">Todas Operações</option>
-    <option value="INSERT">INSERT</option>
-    <option value="UPDATE">UPDATE</option>
-    <option value="DELETE">DELETE</option>
-  </select>
-  <input type="date" id="inicio">
-  <input type="date" id="fim">
-  <input type="text" id="buscaId" placeholder="Buscar ID específico">
-  <button class="btn-primary" onclick="carregar()">Filtrar</button>
 </div>
 
 <table>
@@ -279,22 +236,22 @@ function data30(){
 }
 
 async function carregar(){
-  let query=sb.from("historico_alteracao_fichas")
+  const {data,error}=await sb
+    .from("historico_alteracao_fichas")
     .select("*")
     .gte("alterado_em",data30())
     .order("alterado_em",{ascending:false})
     .limit(500);
 
-  if(fTabela.value) query=query.eq("tabela",fTabela.value);
-  if(fOperacao.value) query=query.eq("operacao",fOperacao.value);
-  if(inicio.value) query=query.gte("alterado_em",inicio.value);
-  if(fim.value) query=query.lte("alterado_em",fim.value+" 23:59:59");
-  if(buscaId.value) query=query.eq("registro_id",buscaId.value);
-
-  const {data}=await query;
+  if(error){
+    console.error(error);
+    toast("Erro ao carregar histórico");
+    return;
+  }
 
   tbody.innerHTML="";
   total.innerText=data.length;
+
   let i=0,u=0,d=0;
 
   data.forEach(r=>{
@@ -310,7 +267,7 @@ async function carregar(){
       <td>${r.registro_id}</td>
       <td>
         <button class="btn-secondary" onclick='ver(${JSON.stringify(r)})'>Ver</button>
-        <button class="btn-danger" onclick="restaurar('${r.id}')">Restaurar</button>
+        <button class="btn-danger" onclick="restaurar(this,'${r.id}')">Restaurar</button>
       </td>
     `;
     tbody.appendChild(tr);
@@ -326,63 +283,48 @@ async function ver(item){
   let html="";
 
   if(item.operacao==="UPDATE"){
-    Object.keys(item.dados_depois).forEach(k=>{
-      if(JSON.stringify(item.dados_antes[k])!==JSON.stringify(item.dados_depois[k])){
+    const antes=item.dados_antes||{};
+    const depois=item.dados_depois||{};
+    Object.keys(depois).forEach(k=>{
+      if(JSON.stringify(antes[k])!==JSON.stringify(depois[k])){
         html+=`
         <div class="diff">
-          <strong>${k}</strong><br>
-          <span class="old">ANTES</span>
-          <div class="value">${item.dados_antes[k]}</div>
-          <span class="new">DEPOIS</span>
-          <div class="value">${item.dados_depois[k]}</div>
+          <strong>${k}</strong>
+          <div class="old">ANTES</div>
+          <div class="value">${antes[k]}</div>
+          <div class="new">DEPOIS</div>
+          <div class="value">${depois[k]}</div>
         </div>`;
       }
     });
-  } else {
+  }else{
     html=`<pre>${JSON.stringify(item.dados_depois||item.dados_antes,null,2)}</pre>`;
-  }
-
-  const {data:grupo}=await sb.from("historico_alteracao_fichas")
-    .select("*")
-    .eq("alterado_em",item.alterado_em);
-
-  if(grupo.length>1){
-    html+=`<div class="linked">
-      <strong>Alterações vinculadas detectadas</strong><br><br>`;
-    grupo.forEach(g=>{
-      html+=`${g.tabela} • ${g.operacao}<br>`;
-    });
-    html+=`<br>
-      <button class="btn-danger" onclick="restaurarGrupo('${item.alterado_em}')">
-      Restaurar todas vinculadas
-      </button>
-    </div>`;
   }
 
   conteudo.innerHTML=html;
 }
 
-async function restaurar(id){
-  const senha=prompt("Senha:");
+async function restaurar(btn,id){
+  const senha=prompt("Digite a senha:");
   if(senha!=="8486"){toast("Senha incorreta");return;}
-  await sb.rpc("restaurar_historico",{p_id:id});
-  toast("Restaurado");
-  carregar();
-}
 
-async function restaurarGrupo(dt){
-  const senha=prompt("Senha:");
-  if(senha!=="8486"){toast("Senha incorreta");return;}
-  const {data}=await sb.from("historico_alteracao_fichas")
-    .select("id")
-    .eq("alterado_em",dt);
-  for(const r of data){
-    await sb.rpc("restaurar_historico",{p_id:r.id});
+  btn.disabled=true;
+  btn.innerText="Restaurando...";
+
+  const {error}=await sb.rpc("restaurar_historico",{p_id:id});
+
+  if(error){
+    console.error(error);
+    toast("Erro: "+error.message);
+    btn.disabled=false;
+    btn.innerText="Restaurar";
+    return;
   }
-  toast("Grupo restaurado");
+
+  toast("Restaurado com sucesso!");
+  fechar();
   carregar();
 }
-
 carregar();
 </script>
 
