--- a/historico.html
+++ b/historico.html
@@ -13,105 +13,130 @@
   --primary:#2563eb;
   --danger:#dc2626;
   --success:#16a34a;
+  --warning:#f59e0b;
   --bg:#f1f5f9;
   --card:#ffffff;
   --text:#0f172a;
   --muted:#64748b;
   --border:#e2e8f0;
-  --radius:16px;
+  --radius:18px;
   --shadow:0 20px 50px rgba(0,0,0,.08);
 }
+
 *{box-sizing:border-box}
 body{
   margin:0;
   font-family:Inter;
-  background:var(--bg);
+  background:linear-gradient(180deg,#f8fafc,#eef2f7);
   color:var(--text);
 }
+
 .container{
   max-width:1400px;
   margin:auto;
-  padding:40px 30px;
+  padding:50px 30px;
 }
-h1{margin:0;font-weight:900;}
-.subtitle{color:var(--muted);margin-bottom:30px;}
+
+h1{margin:0;font-weight:900;font-size:32px;}
+.subtitle{color:var(--muted);margin-bottom:35px;font-weight:600;}
 
 .cards{
   display:grid;
   grid-template-columns:repeat(4,1fr);
   gap:20px;
-  margin-bottom:30px;
+  margin-bottom:35px;
 }
+
 .card{
   background:var(--card);
-  padding:25px;
+  padding:28px;
   border-radius:var(--radius);
   box-shadow:var(--shadow);
+  transition:.2s;
 }
+.card:hover{transform:translateY(-4px)}
 .card small{color:var(--muted);font-weight:600;}
-.card strong{font-size:28px;display:block;margin-top:6px;}
+.card strong{font-size:30px;display:block;margin-top:8px;}
 
 .filters{
   background:#fff;
-  padding:20px;
+  padding:22px;
   border-radius:var(--radius);
   box-shadow:var(--shadow);
   display:flex;
   gap:15px;
   flex-wrap:wrap;
-  margin-bottom:30px;
+  margin-bottom:35px;
+  align-items:center;
 }
+
 input,select{
-  padding:10px 14px;
-  border-radius:10px;
+  padding:11px 15px;
+  border-radius:12px;
   border:1px solid var(--border);
+  font-weight:600;
 }
+
 button{
   border:none;
-  padding:10px 16px;
-  border-radius:10px;
+  padding:11px 18px;
+  border-radius:12px;
   font-weight:700;
   cursor:pointer;
   transition:.2s;
+  display:inline-flex;
+  align-items:center;
+  gap:6px;
 }
+
 .btn-primary{
   background:var(--primary);
   color:#fff;
 }
+.btn-primary:hover{opacity:.9}
+
 .btn-danger{
   background:var(--danger);
   color:#fff;
 }
+.btn-danger:hover{opacity:.9}
+
 .btn-secondary{
   background:#e2e8f0;
+  font-weight:700;
 }
-button:disabled{
-  opacity:.6;
-  cursor:not-allowed;
+
+button:disabled{opacity:.6;cursor:not-allowed}
+
+.table-wrap{
+  background:#fff;
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  overflow:hidden;
 }
 
 table{
   width:100%;
   border-collapse:collapse;
-  background:#fff;
-  border-radius:var(--radius);
-  overflow:hidden;
-  box-shadow:var(--shadow);
 }
+
 th,td{
-  padding:14px;
+  padding:16px;
   border-bottom:1px solid var(--border);
 }
+
 th{
   font-size:12px;
   text-transform:uppercase;
   color:var(--muted);
   background:#f8fafc;
+  letter-spacing:.5px;
 }
-tr:hover{background:#f8fafc;}
+
+tr:hover{background:#f8fafc}
 
 .badge{
-  padding:4px 10px;
+  padding:5px 12px;
   border-radius:999px;
   font-size:11px;
   font-weight:800;
@@ -120,57 +145,82 @@ tr:hover{background:#f8fafc;}
 .update{background:#fef9c3;color:#854d0e}
 .delete{background:#fee2e2;color:#991b1b}
 
+.linked-indicator{
+  background:var(--warning);
+  color:#fff;
+  padding:3px 8px;
+  font-size:10px;
+  border-radius:999px;
+  margin-left:8px;
+}
+
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(15,23,42,.6);
+  background:rgba(15,23,42,.65);
   backdrop-filter:blur(6px);
   display:none;
   align-items:center;
   justify-content:center;
 }
+
 .modal-box{
   background:#fff;
   width:95%;
   max-width:1100px;
   max-height:90vh;
   overflow:auto;
-  border-radius:20px;
-  padding:30px;
+  border-radius:24px;
+  padding:35px;
+  box-shadow:0 30px 80px rgba(0,0,0,.2);
 }
+
 .modal-header{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  margin-bottom:20px;
+  margin-bottom:25px;
 }
 
 .diff{
   border:1px solid var(--border);
-  border-radius:12px;
-  padding:15px;
+  border-radius:14px;
+  padding:18px;
   margin-bottom:15px;
+  background:#f8fafc;
 }
-.old{color:#dc2626;font-weight:700}
-.new{color:#16a34a;font-weight:700}
+
+.old{color:var(--danger);font-weight:800}
+.new{color:var(--success);font-weight:800}
+
 .value{
   background:#0f172a;
   color:#fff;
-  padding:8px;
-  border-radius:8px;
+  padding:10px;
+  border-radius:10px;
   font-size:13px;
-  margin-top:5px;
+  margin-top:6px;
+  overflow:auto;
+}
+
+.group-box{
+  margin-top:25px;
+  padding:18px;
+  border-radius:14px;
+  background:#fff7ed;
+  border:1px dashed #f59e0b;
 }
 
 .toast{
   position:fixed;
-  bottom:20px;
-  right:20px;
+  bottom:25px;
+  right:25px;
   background:#0f172a;
   color:#fff;
-  padding:12px 18px;
-  border-radius:10px;
+  padding:14px 22px;
+  border-radius:12px;
   display:none;
+  font-weight:600;
 }
 </style>
 </head>
@@ -178,8 +228,9 @@ tr:hover{background:#f8fafc;}
 <body>
 
 <div class="container">
-<h1>🕓 Auditoria de Alterações</h1>
-<div class="subtitle">Rollback inteligente com verificação real</div>
+
+<h1>🕓 Auditoria Inteligente</h1>
+<div class="subtitle">Monitoramento avançado com rollback individual e em grupo</div>
 
 <div class="cards">
   <div class="card"><small>Total</small><strong id="total">0</strong></div>
@@ -188,6 +239,7 @@ tr:hover{background:#f8fafc;}
   <div class="card"><small>Deletes</small><strong id="del">0</strong></div>
 </div>
 
+<div class="table-wrap">
 <table>
 <thead>
 <tr>
@@ -200,6 +252,7 @@ tr:hover{background:#f8fafc;}
 </thead>
 <tbody id="tbody"></tbody>
 </table>
+</div>
 
 </div>
 
@@ -227,7 +280,10 @@ function toast(msg){
   setTimeout(()=>t.style.display="none",3000);
 }
 
-function fechar(){ modal.style.display="none"; }
+function fechar(){
+  modal.style.display="none";
+  document.body.style.overflow="auto";
+}
 
 function data30(){
   const d=new Date();
@@ -243,35 +299,43 @@ async function carregar(){
     .order("alterado_em",{ascending:false})
     .limit(500);
 
-  if(error){
-    console.error(error);
-    toast("Erro ao carregar histórico");
-    return;
-  }
+  if(error){ toast(error.message); return; }
 
   tbody.innerHTML="";
   total.innerText=data.length;
 
   let i=0,u=0,d=0;
 
-  data.forEach(r=>{
+  for(const r of data){
+
     if(r.operacao==="INSERT") i++;
     if(r.operacao==="UPDATE") u++;
     if(r.operacao==="DELETE") d++;
+
+    const {data:grupo}=await sb
+      .from("historico_alteracao_fichas")
+      .select("id")
+      .eq("alterado_em",r.alterado_em);
+
+    const vinculado = grupo.length > 1;
 
     const tr=document.createElement("tr");
     tr.innerHTML=`
       <td>${new Date(r.alterado_em).toLocaleString()}</td>
       <td>${r.tabela}</td>
-      <td><span class="badge ${r.operacao.toLowerCase()}">${r.operacao}</span></td>
-      <td>${r.registro_id}</td>
       <td>
+        <span class="badge ${r.operacao.toLowerCase()}">${r.operacao}</span>
+        ${vinculado ? '<span class="linked-indicator">VINCULADO</span>' : ''}
+      </td>
+      <td>${r.registro_id}</td>
+      <td style="display:flex;gap:10px;">
         <button class="btn-secondary" onclick='ver(${JSON.stringify(r)})'>Ver</button>
-        <button class="btn-danger" onclick="restaurar(this,'${r.id}')">Restaurar</button>
+        <button class="btn-danger" onclick="restaurarIndividual(this,'${r.id}')">Restaurar</button>
+        ${vinculado ? `<button class="btn-primary" onclick="restaurarGrupo('${r.alterado_em}')">Restaurar Grupo</button>` : ''}
       </td>
     `;
     tbody.appendChild(tr);
-  });
+  }
 
   ins.innerText=i;
   upd.innerText=u;
@@ -280,6 +344,8 @@ async function carregar(){
 
 async function ver(item){
   modal.style.display="flex";
+  document.body.style.overflow="hidden";
+
   let html="";
 
   if(item.operacao==="UPDATE"){
@@ -297,16 +363,16 @@ async function ver(item){
         </div>`;
       }
     });
-  }else{
+  } else {
     html=`<pre>${JSON.stringify(item.dados_depois||item.dados_antes,null,2)}</pre>`;
   }
 
   conteudo.innerHTML=html;
 }
 
-async function restaurar(btn,id){
-  const senha=prompt("Digite a senha:");
-  if(senha!=="8486"){toast("Senha incorreta");return;}
+async function restaurarIndividual(btn,id){
+  const senha=prompt("Senha:");
+  if(senha!=="8486"){ toast("Senha incorreta"); return; }
 
   btn.disabled=true;
   btn.innerText="Restaurando...";
@@ -314,17 +380,35 @@ async function restaurar(btn,id){
   const {error}=await sb.rpc("restaurar_historico",{p_id:id});
 
   if(error){
-    console.error(error);
-    toast("Erro: "+error.message);
+    toast(error.message);
     btn.disabled=false;
     btn.innerText="Restaurar";
     return;
   }
 
-  toast("Restaurado com sucesso!");
+  toast("Registro restaurado");
   fechar();
   carregar();
 }
+
+async function restaurarGrupo(timestamp){
+  const senha=prompt("Senha:");
+  if(senha!=="8486"){ toast("Senha incorreta"); return; }
+
+  const {data}=await sb
+    .from("historico_alteracao_fichas")
+    .select("id")
+    .eq("alterado_em",timestamp);
+
+  for(const r of data){
+    await sb.rpc("restaurar_historico",{p_id:r.id});
+  }
+
+  toast("Grupo restaurado com sucesso");
+  fechar();
+  carregar();
+}
+
 carregar();
 </script>
 
