--- a/historico.html
+++ b/historico.html
@@ -229,8 +229,8 @@ tr:hover{background:#f8fafc}
 
 <div class="container">
 
-<h1>🕓 Auditoria Inteligente</h1>
-<div class="subtitle">Monitoramento avançado com rollback individual e em grupo</div>
+<h1>Auditoria e Backup</h1>
+<div class="subtitle">Análide de alterações e restaurações</div>
 
 <div class="cards">
   <div class="card"><small>Total</small><strong id="total">0</strong></div>
